fixed margin issues on smaller screens

--- a/src/screens/Home/home.css
+++ b/src/screens/Home/home.css
@@ -24,6 +24,17 @@
     z-index: 5;
 }
 
+@media screen and (max-width: 1024px) {
+    .header-container {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        right: 1.6rem;
+        top: 10%;
+        z-index: 5;
+    }
+}
+
 button {
     border: none;
     outline: none;
